--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           node-version: "12.x"
       - run: npm ci
+      - run: npm install prettier
       - run: npm run format:check
       - run: npm test -- --coverage
         env:
