--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,9 @@ jobs:
           path: build
       - name: Create a Release
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-      - run: npm install semantic-release
-      - run: npm semantic-release
+        run: |
+          npm install semantic-release
+          npm semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Deploy Project
